# some_app

./: .gitignore  .gitlab-ci.yml  README.md  docker-compose.yml  hosts  smelter-monitoring-ansible-playbook.yml
src/camera_patrol_controller/: CMakeLists.txt  package.xml  setup.py
src/camera_patrol_controller/config/: slagsquare_flir_a310pt_camera_patrol_controller_params.yaml
src/camera_patrol_controller/launch/: camera_patrol_controller_node.launch
src/camera_patrol_controller/nodes/: camera_patrol_controller_node.py
src/cascade_pot_detection/: CMakeLists.txt  package.xml  setup.py
src/cascade_pot_detection/launch/: birdview_pot_detection_node.launch
src/cascade_pot_detection/nodes/: birdview_pot_detection_node.py
src/cascade_pot_detection/test/: test_pot_detection.py
src/cascade_state_monitoring/: CMakeLists.txt  package.xml  setup.py
src/cascade_state_monitoring/config/: fumes_cover_monitor_params.yaml  pot_filling_state_monitoring_params.yaml  pot_spout_positions.yaml
src/cascade_state_monitoring/launch/: cascade_state_monitoring.launch
src/cascade_state_monitoring/nodes/: fumes_cover_monitoring_node.py  pot_filling_monitoring_node.py
src/ip_camera_driver/: CMakeLists.txt  package.xml  requirements.txt  rosdep.yaml  setup.py
src/ip_camera_driver/calibrations/: dahua_ptz_intrinsic_calibration.yaml
src/ip_camera_driver/config/: cascade_bird_ir_camera_direct_configuration.yaml  cascade_frog_ir_camera_direct_configuration.yaml  cascade_frog_left_rgb_camera_direct_configuration.yaml  cascade_frog_right_rgb_camera_direct_configuration.yaml  cascade_milestone_universal_camera_vms_configuration.yaml  dahua_ptz_rgb_direct_configuration.yaml  dahua_ptz_rgb_vms_configuration.yaml  mock_cascade_milestone_universal_camera_vms_configuration.yaml  mock_slagsquare_milestone_universal_camera_vms_configuration.yaml  pepibru_virtual_from_vms_rgb_camera_direct_configuration.yaml  slagsquare_flir_a310pt_camera_direct_configuration.yaml  slagsquare_flir_a310pt_ir_camera_direct_configuration.yaml  slagsquare_flir_a310pt_rgb_camera_direct_configuration.yaml  slagsquare_milestone_universal_camera_vms_configuration.yaml
src/ip_camera_driver/launch/: bag_playback.launch  bag_recorder.launch  camera_info_publishers.launch  cascade_monitoring_camera_drivers.launch  dual_rtsp_streaming_node.launch  export_images_from_bag.launch  ip_camera_driver_node.launch  milestone_universal_camera_driver_node.launch  republish.launch  rtsp_streamer.launch  slagsquare_monitoring_camera_drivers.launch
src/ip_camera_driver/media/: thermal_snapshot.fff
src/ip_camera_driver/nodes/: flir_cgi_driver_node.py  ip_camera_driver_node.py  ip_camera_onvif_ptz_control_driver_node.py  rtsp_streamer_node.py
src/ip_camera_driver/scripts/: camera_info_publisher.py  multifile_bag_player.py  republish_image.py  rosbag_image_extractor.py  rtsp_test.py
src/slagsquare_groundplan_visualization/: CMakeLists.txt  package.xml  setup.py
src/slagsquare_groundplan_visualization/config/: groundplan_visualization_params.yaml
src/slagsquare_groundplan_visualization/launch/: groundplan_visualization_node.launch
src/slagsquare_groundplan_visualization/nodes/: groundplan_visualization_node.py
src/slagsquare_groundplan_visualization/scripts/: groundplan_demo.py
src/slagsquare_monitoring_fsm/: CMakeLists.txt  package.xml  setup.py
src/slagsquare_monitoring_fsm/launch/: slagsquare_monitoring_fsm.launch
src/slagsquare_monitoring_fsm/nodes/: slagsquare_monitoring_fsm_node.py
src/slagsquare_monitoring_fsm/scripts/: update_monitor.py  update_timer.py
src/slagsquare_pot_instance_segmentation/: CMakeLists.txt  README.md  package.xml  requirements.txt  setup.py
src/slagsquare_pot_instance_segmentation/config/: pot_detector_params.yaml
src/slagsquare_pot_instance_segmentation/launch/: pot_detector_node.launch
src/slagsquare_pot_instance_segmentation/nodes/: pot_detector_node.py
src/slagsquare_pot_instance_segmentation/scripts/: rosbag_to_dataset.py  test_pot.py
src/slagsquare_pot_state_server/: CMakeLists.txt  package.xml  requirements.txt  setup.py
src/slagsquare_pot_state_server/config/: crane_observer_params.yaml  homographies_rgb_cad.yml  slagsquare_pot_state_server_params.yaml
src/slagsquare_pot_state_server/launch/: pot_state_server_node.launch
src/slagsquare_pot_state_server/media/: ground_plan.png.bak
src/slagsquare_pot_state_server/nodes/: pot_state_server_node.py
src/slagsquare_pot_state_server/test/: test_GridModel.py  test_crane_observer.py  test_crane_reader.py  test_crane_var.py
src/smelter_actions/: CMakeLists.txt  package.xml
src/smelter_actions/action/: DetectObjects.action  Move.action  PTZ.action  TakeSnapshot.action  UpdatePotStates.action
src/smelter_deployment_tests/: CMakeLists.txt  package.xml
src/smelter_deployment_tests/launch/: milestone_streams_test.launch  osi_pi_tags_test.launch  slagsquare_monitoring_system_test.launch
src/smelter_diagnostics/: CMakeLists.txt  package.xml  setup.py
src/smelter_diagnostics/bags/: diagnostics_agg.bag
src/smelter_diagnostics/config/: diagnostic_aggregator_params.yaml  diagnostics_osi_pi_tags.yaml
src/smelter_diagnostics/launch/: diagnostics.launch  diagnostics_aggregator_node.launch  diagnostics_publisher_node.launch
src/smelter_diagnostics/nodes/: diagnostics_publisher_node.py
src/smelter_monitoring/: CMakeLists.txt  package.xml
src/smelter_monitoring_bringup/: CMakeLists.txt  package.xml
src/smelter_monitoring_bringup/launch/: cascade_monitoring_bringup.launch  roscore.launch  slagsquare_monitoring_bringup.launch  slagsquare_monitoring_rosbag_bringup.launch  smelter_common_bringup.launch  smelter_monitoring_bringup.launch
src/smelter_monitoring_bringup/scripts/: cascade_monitoring_upstart_install.sh  setup.sh  (+11 more)
src/smelter_monitoring_rqt_gui/: CMakeLists.txt  package.xml
src/smelter_msgs/: CMakeLists.txt  package.xml
src/smelter_osi_pi/: CMakeLists.txt  package.xml  requirements.txt  setup.py
src/smelter_srvs/: CMakeLists.txt  package.xml
src/smelter_tests/: CMakeLists.txt  package.xml
(+101 files in other folders)
