<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ip_camera_driver</name>
  <version>0.0.0</version>
  <description>The ip_camera_driver package</description>
  <author email="george@kapernikov.com">George Kouros</author>
  <maintainer email="george@kapernikov.com">George Kouros</maintainer>
  <license>Copyright (c) 2019 Kapernikov CVBA. All rights reserved.</license>
  <url type="website">http://www.kapernikov.com/</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>actionlib</depend>
  <depend>camera_calibration_parsers</depend>
  <depend>cv_bridge</depend>
  <depend>diagnostic_msgs</depend>
  <depend>polled_camera</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>smelter_actions</depend>
  <depend>smelter_msgs</depend>
  <depend>smelter_srvs</depend>
  <depend>std_msgs</depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>theora_image_transport</exec_depend>
  <exec_depend>compressed_image_transport</exec_depend>

  <export>
  </export>
</package>
