<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>slagsquare_pot_state_server</name>
  <version>0.0.0</version>
  <description>The slagsquare_pot_state_server package</description>
  <author email="george@kapernikov.com">George Kouros</author>
  <maintainer email="george@kapernikov.com">George Kouros</maintainer>
  <license>Copyright (c) 2019 Kapernikov CVBA. All rights reserved.</license>
  <url type="website">http://www.kapernikov.com/</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>cv_bridge</depend>
  <depend>nav_msgs</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>smelter_actions</depend>
  <depend>smelter_msgs</depend>
  <depend>std_msgs</depend>

  <export>
  </export>
</package>
